# AI-Operations-Orchestrator

./: .env.example  .gitignore  BUILD_PLAN.md  PHASE1_IMPLEMENTATION.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cd-containers.yml  (+1 more)
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/ai_operations_orchestrator_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_documents_pgvector.py  003_tenants.py  004_permissions.py
apps/api/app/: __init__.py  bootstrap.py  main.py
apps/api/app/ai/: __init__.py  embeddings.py  extraction.py  ingest.py  llm_extraction.py  policy.py  retrieval.py  retrieval_pgvector.py
apps/api/app/api/: dependencies.py
apps/api/app/api/v1/: __init__.py  router.py
apps/api/app/api/v1/routes/: __init__.py  admin.py  approvals.py  auth.py  documents.py  health.py  internal.py  permissions.py  workflows.py
apps/api/app/core/: __init__.py  auth.py  config.py  locks.py  rbac.py  security.py
apps/api/app/db/: migrations.py  models.py  postgres.py  repositories.py
apps/api/app/domain/: __init__.py  admin.py  models.py  reporting.py  schemas.py
apps/api/app/integrations/: __init__.py  base.py  gmail.py  jira.py  registry.py  slack.py
apps/api/app/observability/: __init__.py  telemetry.py
apps/api/app/orchestration/: __init__.py  graph.py  langgraph_adapter.py  runtime.py  state.py
apps/api/app/services/: approvals.py  audit.py  documents.py  queue.py  reporting.py  tenants.py  users.py  workflows.py
apps/api/app/workers/: __init__.py  dispatcher.py  queue.py
apps/api/scripts/: seed_admin.py
apps/api/tests/: test_admin_users.py  test_auth_jwt_roundtrip.py  test_dispatcher_slack.py  test_documents_ingestion.py  test_graph_and_dispatch.py  test_langgraph_flow.py  test_llm_extraction.py  test_observability.py  test_postgres_users.py  test_reporting.py  test_tenants_postgres.py  test_workflows.py
docs/: PRODUCTION_IMPLEMENTATION_PLAN.md  modules.md
scripts/: smoke_verify.ps1
(+12 files in other folders)
