[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-operations-orchestrator-api"
version = "0.1.0"
description = "FastAPI gateway and orchestration runtime for AI operations workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "psycopg>=3.1.0,<4.0.0",
  "alembic>=1.14.0,<2.0.0",
  "redis>=5.0.0,<6.0.0",
  "aioredis>=2.0.1,<3.0.0",
  "python-jose>=3.3.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "python-multipart>=0.0.6,<1.0.0",
  "langgraph>=0.1.0,<1.0.0",
  "langsmith>=0.1.0,<1.0.0",
  "langchain>=0.2.0,<1.0.0",
  "cryptography>=42.0.0,<43.0.0",
  "pytz>=2024.1",
  "httpx>=0.28.0,<1.0.0"
]

# Observability integrations (production)
dependencies = [
  "prometheus-client>=0.16.0,<1.0.0",
  "opentelemetry-api>=1.22.0,<2.0.0",
  "opentelemetry-sdk>=1.22.0,<2.0.0",
  "opentelemetry-exporter-jaeger>=1.22.0,<2.0.0",
  "opentelemetry-exporter-otlp>=1.22.0,<2.0.0",
]

# Observability integrations
[project.optional-dependencies.observability]
prometheus-client = ">=0.16.0"
opentelemetry-api = ">=1.22.0"
opentelemetry-sdk = ">=1.22.0"
opentelemetry-exporter-jaeger = ">=1.22.0"
opentelemetry-exporter-otlp = ">=1.22.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.11.0,<1.0.0",
  "testcontainers>=4.0.0,<5.0.0",
  "black>=24.0.0,<25.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "prometheus-client>=0.16.0",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-exporter-jaeger>=1.22.0",
  "opentelemetry-exporter-otlp>=1.22.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
